objects/vlocity_cmt__ObjectSection__c.object
<CustomObject>
    <description>Represents a section within a facet of an object or object type layout. Sections display as the second level of grouping in the page layout such as an in-page grouping of page elements (a section of a page).</description>
    <fields>
        <fullName>vlocity_cmt__EffectiveFromDate__c</fullName>
        <label>Effective From</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__EffectiveUntilDate__c</fullName>
        <label>Effective Until</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__GlobalKey__c</fullName>
        <externalId>true</externalId>
        <label>Global Key</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__IsActive__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ObjectFacetId__c</fullName>
        <label>Object Facet</label>
        <referenceTo>vlocity_cmt__ObjectFacet__c</referenceTo>
        <relationshipLabel>Vlocity Object Sections</relationshipLabel>
        <relationshipName>VlocityObjectSections</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__SectionId__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Section</label>
        <referenceTo>vlocity_cmt__UISection__c</referenceTo>
        <relationshipLabel>Vlocity Object Sections</relationshipLabel>
        <relationshipName>VlocityObjectSections</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Sequence__c</fullName>
        <label>Sequence</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ViewType__c</fullName>
        <label>View Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Field Layout</fullName>
                    <default>true</default>
                    <label>Field Layout</label>
                </value>
                <value>
                    <fullName>Custom View</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ViewUri__c</fullName>
        <label>View URI</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Vlocity Object Section</label>
    <nameField>
        <label>Object Section Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Vlocity Object Sections</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>